--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,46 @@
+# language: node_js
+# node_js:
+#   - '11.0'
+# branches:
+#   only:
+#     - master
+# before_script:
+#   - npm install -g @angular/cli
+# script:
+#   - npm install
+#   - npm run build
+# deploy:
+#   skip_cleanup: true
+#   provider: gh-pages
+#   token:
+#     secure: ''
+
 language: node_js
 node_js:
-  - "10"
-dist: trusty
-sudo: requiredbranches:
+  - '11.0'
+
+branches:
   only:
-  - masterbefore_script:
-  - npm install -g @angular/cliscript:
-  - ng lint
-  - npm run test-headless
-  - ng build --prod --build-optimizer --base-href https://cerealkiller97.github.io/NG-VideoGamer:
+    - master
+
+addons:
+  chrome: stable
+
+before_script:
+  - yarn global add @angular/cli
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
+script:
+  - ng build --prod
+
+deploy:
   provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  local_dir: dist/travis-demo
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: ./dist/
   on:
-    branch: master
