--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,3 @@
-# language: node_js
-# node_js:
-#   - '11.0'
-# branches:
-#   only:
-#     - master
-# before_script:
-#   - npm install -g @angular/cli
-# script:
-#   - npm install
-#   - npm run build
-# deploy:
-#   skip_cleanup: true
-#   provider: gh-pages
-#   token:
-#     secure: ''
-
 language: node_js
 node_js:
   - '11.0'
@@ -38,6 +21,8 @@ script:
   - ng build --prod
 
 deploy:
+  - edge:
+      branch: v1.8.47
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
