--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,17 @@
 language: node_js
 node_js:
-  - '11.0'
-
-branches:
+  - "11"
+dist: trusty
+sudo: requiredbranches:
   only:
-    - master
-
-addons:
-  chrome: stable
-
-before_script:
-  - yarn global add @angular/cli
-
-cache:
-  yarn: true
-  directories:
-    - node_modules
-
-script:
-  - ng build --prod
-
-deploy:
+  - masterbefore_script:
+  - npm install -g @angular/cliscript:
+  - ng lint
+  - npm run test-headless
+  - ng build --prod --base-href https://cerealkiller97.github.io/NG-VideoGamer:
   provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: true
-  local-dir: ./dist/video-gamer
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: dist/video-gamer
   on:
     branch: master
